--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/MunazR/Roomies-Backend#readme",
   "dependencies": {
+    "bluebird": "^3.3.1",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "mongoose": "^4.4.4"
