--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bluebird": "^3.3.1",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
-    "mongoose": "^4.4.4"
+    "mongoose": "^4.4.4",
+    "winston": "^2.2.0"
   }
 }
